fixed custom status duration not being clearly readable in certain circumstances

--- a/AlanWalkerTheme/popouts.css
+++ b/AlanWalkerTheme/popouts.css
@@ -2,6 +2,11 @@
 .layerContainer_cd0de5 {
   filter: unset;
 
+  .popout_f6639d {
+    border: 1px solid rgba(var(--border-color-1), var(--border-opacity-1));
+    border-top: 0;
+    background-color: var(--popout-body);
+  }
   .backdrop_e4f2ae {
     background: transparent !important;
     backdrop-filter: blur(2px) !important;
@@ -43,6 +48,9 @@
       border-radius: 0;
       box-sizing: border-box;
   
+      .open_f6639d {
+        border: 1px solid rgba(var(--border-color-1), var(--border-opacity-1));
+      }
       &::-webkit-scrollbar {
         width: 8px;
       }
